--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "google-books-search",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "server.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AnjaliKevadiya/google-books-search.git"
@@ -17,6 +14,15 @@
     "url": "https://github.com/AnjaliKevadiya/google-books-search/issues"
   },
   "homepage": "https://github.com/AnjaliKevadiya/google-books-search#readme",
+  "scripts": {
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
